[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stasis"
version = "0.1.0"
description = "RL Performance Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray>=2.47.1",
    "vllm>=0.9.2",
    "pydantic>=2.0.0",
    "pynvml>=11.0.0",
    "psutil>=5.9.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
packages = ["rlperf"]

[tool.setuptools.package-dir]
rlperf = "rlperf"
